# cm2025_v05

./: output.txt
application/bt_earphone/: Kconfig  prj.conf
application/bt_earphone/app_conf/cuckoo_dvb_earphone/: tr_app.conf
application/bt_earphone/outdir_app/cuckoo_dvb_earphone/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  zephyr_modules.txt
application/bt_earphone/src/: CMakeLists.txt  Makefile  output.txt
application/bt_earphone/src/btcall/: btcall_ctrl.c  btcall_main.c
application/bt_earphone/src/include/: app_defines.h
application/bt_earphone/src/main/: system_app_main.c  (+7 more)
framework/audio/: audio_aps.c  audio_policy.c  audio_record.c  audio_record.h  audio_track.c
framework/bluetooth/: Kconfig.tr
framework/bluetooth/bt_manager/: CMakeLists.txt  bt_manager.c  bt_manager_audio.c  bt_manager_config.c  bt_manager_inner.h  bt_manager_le_audio.c  tr_bt_manager_audio.c  tr_bt_manager_ble_client.c
framework/bluetooth/bt_service/: CMakeLists.txt
framework/bluetooth/bt_service/include/: btsrv_inner.h  tr_btsrv_inner.h
framework/bluetooth/include/: bt_manager.h  bt_manager_audio.h  btservice_api.h  tr_bt_manager_audio.h  tr_btservice_api.h
framework/media/: media_mem.c  media_player.c
framework/system/hotplug/: hotplug_manager.c  hotplug_usb.c
framework/system/include/: hotplug_manager.h
framework/system/tts/: tts_manager.c
framework/usb/: usb_device.c
zephyr/: .build_config
zephyr/.cache/ToolchainCapabilityDatabase/: log.txt
zephyr/framework/audio/: audioin_hal.c
zephyr/framework/include/: dsp_hal_defs.h
(+180 files in other folders)
